--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	</head>
 	<body>
 <h1 p align="center">Formularz o przyjecie do klubu sportowego"orzel"</h1>
-<font size="5"><label for="name">imie</label><input type="text" id="name"></font>
-<font size="5"><label>nazwisko<input type="text" required></label></font><br>
-<font size="5"><label>data urodzenia<input type="date" required></label></font>
-<font size="5"><label>Miejsce urodzenia<input type="text" required></label></font><br>
-<font size="5"><label>adres<input type="text" required></label></font>
-<font size="5"><label>nr tel/email<input type="text" required></label></font><br>
-<font size="5"><label>plec<input type="text" required></label></font><br><br>
+	<font size="5"><label>imie<input type="text" required></label></font><br>
+	<font size="5"><label>nazwisko<input type="text" required></label></font><br>
+	<font size="5"><label>data urodzenia<input type="date" required></label></font>
+	<font size="5"><label>Miejsce urodzenia<input type="text" required></label></font><br>
+	<font size="5"><label>adres<input type="text" required></label></font>
+	<font size="5"><label>nr tel/email<input type="text" required></label></font><br>
+	<font size="5"><label>plec<input type="text" required></label></font><br><br>
 <p><font size="6">czy lubisz grac w<br>
 siatkowke?</font></p>
 <TEXTAREA ></TEXTAREA>
@@ -21,7 +21,7 @@ siatkowke?</font></p>
 <TEXTAREA ></TEXTAREA><br>
 <p><font size="6">dlaczego nasz klub?</font></p>
 <TEXTAREA ></TEXTAREA><br>
-<font size="5>"<form action="/order">
+	<font size="5>"<form action="/order">
 jak dobrze grasz?
 <br>
 <label>
@@ -48,7 +48,7 @@ dobrze
 <input type="radio">
 PROFI
 </label>
-</font>
+	</font>
 
 
 
