--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 <h1 p align="center">Formularz o przyjecie do klubu sportowego"orzel"</h1>
-	<font size="5"><label>imie<input type="text" required></label></font><br>
+	<td><font size="5"><label>imie<input type="text" required></label></font></td>
 	<font size="5"><label>nazwisko<input type="text" required></label></font><br>
 	<font size="5"><label>data urodzenia<input type="date" required></label></font>
 	<font size="5"><label>Miejsce urodzenia<input type="text" required></label></font><br>
