--- a/index.html
+++ b/index.html
@@ -50,7 +50,30 @@ PROFI
 </label>
 	</font>
 
-
+	<font align="right" size="5>"<form action="/order">
+czy dobrze sie odzywiasz?
+	<br>
+	<label>
+	<input type="radio">
+	nie
+	</label>
+	<br>
+	<label>
+	<input type="radio">
+	tak
+	</label>
+	<br>
+	<label>
+	<input type="radio">
+	nie wiem
+	</label>
+	<br>
+	<label>
+	<input type="radio">
+	czasami moge zjesc<br>cos niezdrowego
+	</label>
+	<br>
+	</font>
 
  	</body>
 	</html>
