--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ siatkowke?</font></p>
 <TEXTAREA ></TEXTAREA><br>
 <p align="left"><font size="6">dlaczego nasz klub?</font></p>
 <TEXTAREA ></TEXTAREA><br>
-	<font size="5>"<form action="/order">
+<p align="left"<font size="5>"<form action="/order">
 jak dobrze grasz?
 <br>
 <label>
@@ -48,9 +48,10 @@ dobrze
 <input type="radio">
 PROFI
 </label>
-	</font>
+</p></font>
 
-	<font align="right" size="5>"<form action="/order">
+
+<p align="right"><font  size="5>"<form action="/order">
 czy dobrze sie odzywiasz?
 	<br>
 	<label>
@@ -73,7 +74,7 @@ czy dobrze sie odzywiasz?
 	czasami moge zjesc<br>cos niezdrowego
 	</label>
 	<br>
-	</font>
+	</font></p>
 
  	</body>
 	</html>
