--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 <h1 p align="center">Formularz o przyjecie do klubu sportowego"orzel"</h1>
+		<hr color="black"></hr>
 	<td><font size="5"><label>imie<input type="text" required></label></font></td>
 	<font size="5"><label>nazwisko<input type="text" required></label></font><br>
 	<font size="5"><label>data urodzenia<input type="date" required></label></font>
@@ -74,7 +75,9 @@ czy dobrze sie odzywiasz?
 	czasami moge zjesc<br>cos niezdrowego
 	</label>
 	<br>
-	</font></p>
+	</font></p><br>
+
+	<A HREF="index.html"> wróć </A>  
 
  	</body>
 	</html>
