--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 <h1 p align="center">Formularz o przyjecie do klubu sportowego"orzel"</h1>
-		<hr color="black"></hr>
+		<hr color="black"size="3"></hr>
 	<td><font size="5"><label>imie<input type="text" required></label></font></td>
 	<font size="5"><label>nazwisko<input type="text" required></label></font><br>
 	<font size="5"><label>data urodzenia<input type="date" required></label></font>
@@ -77,7 +77,7 @@ czy dobrze sie odzywiasz?
 	<br>
 	</font></p><br>
 
-	<A HREF="index.html"> wróć </A>  
+	 <a href="file:///C:/Users/hushc/OneDrive/Desktop/school/4.html" ><p align="left">poczta</a>
 
  	</body>
 	</html>
