--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ czy dobrze sie odzywiasz?
 	<br>
 	</font></p><br>
 
-	 <a href="file:///C:/Users/hushc/OneDrive/Desktop/school/4.html" ><p align="left">poczta</a>
-
+	<tr>
+	<td> <a href="mailto:EMAIL" ><font size="5"<p align="right">wyslij</a></td>
+        </tr>
  	</body>
 	</html>
