--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ czy dobrze sie odzywiasz?
 	</font></p><br>
 
 	<tr>
-	<td> <a href="mailto:EMAIL" ><font size="5"<p align="right">wyslij</a></td>
+	<td> <a href="mailto:EMAIL" ><font size="5"<p align="right">wyslij</a></p></td>
         </tr>
  	</body>
 	</html>
