--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <p align="left"><font size="6">czy lubisz grac w<br>
 siatkowke?</font></p>
 <TEXTAREA ></TEXTAREA>
- <p align="right>"><p><font size="6">czy masz problem ze zdrowiem, albo <br>alergie?</font></p>
+ <p align="right"><font size="6">czy masz problem ze zdrowiem, albo <br>alergie?</font></p>
 <TEXTAREA ></TEXTAREA><br>
 <p align="left"><font size="6">dlaczego nasz klub?</font></p>
 <TEXTAREA ></TEXTAREA><br>
-<p align="left"<font size="5>"<form action="/order">
+<p align="left"<font size="6>"<form action="/order">
 jak dobrze grasz?
 <br>
 <label>
