--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<body>
 <h1 p align="center">Formularz o przyjecie do klubu sportowego"orzel"</h1>
 		<hr color="black"size="3"></hr>
-	<td><font size="5"><label size="5">imie<input type="text" required></label></font></td>
-	<font size="5"><label size="5">nazwisko<input type="text" required></label></font><br>
-	<font size="5"><label>data urodzenia<input type="date" required></label></font>
-	<font size="5"><label>Miejsce urodzenia<input type="text" required></label></font><br>
+	<td><font size="6"><label>imie<input type="text" required></label></font></td>
+	<font size="6"><label>nazwisko<input type="text" required></label></font><br>
+	<font size="6"><label>data urodzenia<input type="date" required></label></font>
+	<font size="6"><label>Miejsce urodzenia<input type="text" required></label></font><br>
 	<font size="5"><label>adres<input type="text" required></label></font>
 	<font size="5"><label>nr tel/email<input type="text" required></label></font><br>
 	<font size="5"><label>plec<input type="text" required></label></font><br><br>
@@ -19,10 +19,10 @@
 siatkowke?</font></p>
 <TEXTAREA ></TEXTAREA>
  <p align="right"><font size="6">czy masz problem ze zdrowiem, albo <br>alergie?</font></p>
-<TEXTAREA ></TEXTAREA><br>
+<TEXTAREA align="right"></TEXTAREA><br>
 <p align="left"><font size="6">dlaczego nasz klub?</font></p>
 <TEXTAREA ></TEXTAREA><br>
-<p align="left"<font size="6>"<form action="/order">
+<p align="left"<font size="6"><form action="/order">
 jak dobrze grasz?
 <br>
 <label>
@@ -52,7 +52,7 @@ PROFI
 </p></font>
 
 
-<p align="right"><font  size="5>"<form action="/order">
+<p align="right"><font  size="6"><form action="/order">
 czy dobrze sie odzywiasz?
 	<br>
 	<label>
