--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	<font size="6"><label>nazwisko<input type="text" required></label></font><br>
 	<font size="6"><label>data urodzenia<input type="date" required></label></font>
 	<font size="6"><label>Miejsce urodzenia<input type="text" required></label></font><br>
-	<font size="5"><label>adres<input type="text" required></label></font>
-	<font size="5"><label>nr tel/email<input type="text" required></label></font><br>
-	<font size="5"><label>plec<input type="text" required></label></font><br><br>
+	<font size="6"><label>adres<input type="text" required></label></font>
+	<font size="6"><label>nr tel/email<input type="text" required></label></font><br>
+	<font size="6"><label>plec<input type="text" required></label></font><br><br>
 <p align="left"><font size="6">czy lubisz grac w<br>
 siatkowke?</font></p>
 <TEXTAREA ></TEXTAREA>
  <p align="right"><font size="6">czy masz problem ze zdrowiem, albo <br>alergie?</font></p>
-<TEXTAREA align="right"></TEXTAREA><br>
+<p align="right"><TEXTAREA ></TEXTAREA></p><br>
 <p align="left"><font size="6">dlaczego nasz klub?</font></p>
 <TEXTAREA ></TEXTAREA><br>
 <p align="left"<font size="6"><form action="/order">
